# trade-ideas

./: .gitignore  README.md  convert_bird_to_jsonl.py  pyproject.toml
.github/workflows/: ci.yml
db/migrations/: 001_init.sql
prompts/: analyst.md  gatekeeper.md
schemas/: alpha_object.schema.json  gatekeeper.schema.json
scrapers/: x_list_playwright.py
v0/: __init__.py  db.py  digest.py  llm.py  pipeline.py  run.py
