[project]
name = "trade-ideas"
version = "0.1.0"
description = "Extract trading signals from X/Twitter"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "playwright",
    "python-dotenv",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
